objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <description>Created by Nexell to show the Owner without change permission.</description>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Account_ID__c</fullName>
        <description>Created by Nexell and used to display the Account Record ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Owner_Change_Requester__c</fullName>
        <description>This field is used to store who requested the approval process and used in the email template.</description>
        <label>UPC Account Owner Change Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_of_Partner__c</fullName>
        <formula>NOT(ISBLANK( UPC_Partner_Account__c ))</formula>
        <label>Account of Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Account_site__c</fullName>
        <description>Field created by Nexell and used to identify the type of site.</description>
        <label>Account site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Address_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC_Address_ID</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Auto_Pin_Number1__c</fullName>
        <description>1 of 4 Fields to create the Mobile Authentication Code Formula Field</description>
        <displayFormat>{0000}</displayFormat>
        <label>Auto Pin Number1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UPC_Auto_Pin_Number2__c</fullName>
        <description>2 of 4 Fields to create the Mobile Authentication Code Formula Field</description>
        <displayFormat>{0000}</displayFormat>
        <label>Auto Pin Number2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UPC_Auto_Pin_Number3__c</fullName>
        <description>3 of 4 Fields to create the Mobile Authentication Code Formula Field</description>
        <displayFormat>{0000}</displayFormat>
        <label>Auto Pin Number3</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UPC_Building_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  UPC_Address_ID__r.Id , 
TEXT( UPC_Address_ID__r.UPC_ID_BUILDING__c )
, &quot;_self&quot; )</formula>
        <inlineHelpText>This is the Building Id Related to the registered Address.</inlineHelpText>
        <label>Building ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CH_ID__c</fullName>
        <description>Field Created by Nexell to manage the CH-ID. 
The CH-ID is the Zefix identifier.</description>
        <label>CH-ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Change_Owner_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Owner Change Approval Process Requester.</description>
        <label>Change Owner Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Closed_Lost_Opptys__c</fullName>
        <description>Fields created by Nexell to control the # of Opportunities Closed Lost.</description>
        <label>Closed Lost Oppys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UPC_Closed_Won_Opptys__c</fullName>
        <description>Field Created by Nexell to show # of Opportunities won</description>
        <label>Closed Won Oppys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UPC_Commissioning_Type__c</fullName>
        <label>Commissioning Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One time Commission</fullName>
                </value>
                <value>
                    <fullName>Recurring Commission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_CompanyAdditionalName__c</fullName>
        <description>Created by Nexell to store additional name for companies.</description>
        <label>Account Add. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Converted_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track if an account was created from lead conversion.</description>
        <label>Converted Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Count_Primary_Taifun_with_BM_Srv_Id__c</fullName>
        <description>Count Taifun interfaces which are primary account and have business mobile service ids.</description>
        <label>Count Primary Taifun with BM Service Id</label>
        <summaryFilterItems>
            <field>UPC_Account_Interfaces__c.UPC_System__c</field>
            <operation>equals</operation>
            <value>Taifun</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UPC_Account_Interfaces__c.UPC_Primary_Account__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UPC_Account_Interfaces__c.UPC_Business_Mobile_Service_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>UPC_Account_Interfaces__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UPC_Count_Taifun_Interface__c</fullName>
        <description>Used to count Taifun interfaces.</description>
        <inlineHelpText>Used to count Taifun interfaces.</inlineHelpText>
        <label>Count Taifun Interface</label>
        <summaryFilterItems>
            <field>UPC_Account_Interfaces__c.UPC_System__c</field>
            <operation>equals</operation>
            <value>Taifun</value>
        </summaryFilterItems>
        <summaryForeignKey>UPC_Account_Interfaces__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Alert_Value__c</fullName>
        <label>Credit Alert Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>GREY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Credit_Alert__c</fullName>
        <description>Field created by Nexell, the credit score ranks determine the colors appearing.</description>
        <formula>IF( CONTAINS($Profile.Name, &quot;Partner&quot;), 
CASE( UPC_Credit_Alert_Value__c , 
&quot;GREY&quot;, IMAGE(&apos;/Partner/resource/1548836762000/Credit_Alert_Gray&apos;,&apos;Gray&apos;,25,20), 
&quot;RED&quot;, IMAGE(&apos;/Partner/resource/1548835429000/Credit_Alert_Red&apos;,&apos;Red&apos;,25,20), 
&quot;YELLOW&quot;,IMAGE(&apos;/Partne//resource/1548835512000/Credit_Alert_Yellow&apos;,&apos;Yellow&apos;,25,20),
&quot;GREEN&quot;,IMAGE(&apos;/Partner/resource/1548837083000/Credit_Alert_Green&apos;,&apos;Green&apos;,25,20),
IMAGE(&apos;/Partner/resource/1548836762000/Credit_Alert_Gray&apos;,&apos;Gray&apos;,25,20)),

CASE( UPC_Credit_Alert_Value__c , 
&quot;GREY&quot;, IMAGE(&apos;/resource/1548836762000/Credit_Alert_Gray&apos;,&apos;Gray&apos;,25,20), 
&quot;RED&quot;, IMAGE(&apos;/resource/1548835429000/Credit_Alert_Red&apos;,&apos;Red&apos;,25,20), 
&quot;YELLOW&quot;,IMAGE(&apos;/resource/1548835512000/Credit_Alert_Yellow&apos;,&apos;Yellow&apos;,25,20),
&quot;GREEN&quot;,IMAGE(&apos;/resource/1548837083000/Credit_Alert_Green&apos;,&apos;Green&apos;,25,20),
IMAGE(&apos;/resource/1548836762000/Credit_Alert_Gray&apos;,&apos;Gray&apos;,25,20))
)</formula>
        <label>Credit Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Check__c</fullName>
        <description>Field created by Nexell and used to evaluate the credit check score.</description>
        <label>Credit Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Bad Score</fullName>
                </value>
                <value>
                    <fullName>Good Score</fullName>
                </value>
                <value>
                    <fullName>Medium Score</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                    <isActive>false</isActive>
                    <label>Average</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <isActive>false</isActive>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium to Good</fullName>
                    <isActive>false</isActive>
                    <label>Medium to Good</label>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                    <isActive>false</isActive>
                    <label>Very Good</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Customer_Lifecycle__c</fullName>
        <description>Field created by Nexell and used to track the stage of relationship that UPC has with a specific customer.</description>
        <label>Customer Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Sales Funnel</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Customer_Token__c</fullName>
        <description>Needed for route distinguished identification in VPN products.</description>
        <label>Customer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created by Nexell and used to identify accounts which should not be called.</description>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_EHRA_ID__c</fullName>
        <description>Field created by Nexell to identify the EHRA-ID. 
EHRA-ID is used the primary key of Zefix.</description>
        <label>EHRA-ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created by Nexell and used to identify Accounts that Opted out from emails.</description>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Exclude_from_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in order to ignore TestFirma from Reports. Report must use this field in the filters.</description>
        <inlineHelpText>When checking this Checkbox, this Account will be ignored in all reports that have this field as filter.</inlineHelpText>
        <label>Exclude from reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Former_Account_Owner_Name__c</fullName>
        <description>Used to store the former account owner name when changed. (Used in email template)</description>
        <label>Former Account Owner Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Founding_Date__c</fullName>
        <description>Field created by Nexell and used to see which year the relationship started.
This field will be fulfilled by Zefix Integration</description>
        <label>Founding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Full_Billing_Address__c</fullName>
        <description>A hidden field used to accomodate UPC whishes on billing address format. Should be deleted in future as billing address should be replaced with UPC address.</description>
        <formula>BillingStreet + &apos;, &apos; +  BillingPostalCode + &apos; &apos; + BillingCity + &apos;, &apos; + BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Grouped_number_of_employees__c</fullName>
        <description>Used to Group the number of employees into 3 defined groups for segmentation purposes.</description>
        <label>Grouped number of employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 10</fullName>
                </value>
                <value>
                    <fullName>10 - 49</fullName>
                </value>
                <value>
                    <fullName>&gt;=50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Has_Primary_Taifun_with_BM_Srv_Id__c</fullName>
        <formula>UPC_Count_Primary_Taifun_with_BM_Srv_Id__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Primary Taifun with BM Service Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Has_Taifun_Interface__c</fullName>
        <description>Calculates has at least one Taifun interface</description>
        <formula>UPC_Count_Taifun_Interface__c &gt; 0</formula>
        <inlineHelpText>Calculates has at least one Taifun interface</inlineHelpText>
        <label>Has Taifun Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Industry_Division__c</fullName>
        <description>Shows the Industry for the current company. Divisions are defined by the Federal Statistical Office FSO</description>
        <inlineHelpText>Select the Industry Division for the current company. Divisions are defined by the Federal Statistical Office FSO</inlineHelpText>
        <label>Industry Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A01_Crop and animal produc., hunting (Landw. u. Jagd)</fullName>
                </value>
                <value>
                    <fullName>A02_Forestry and logging (Forstw. u. Holzeinschlag)</fullName>
                </value>
                <value>
                    <fullName>A03_Fishing and aquaculture (Fischerei u. Aquakultur)</fullName>
                </value>
                <value>
                    <fullName>B05_Mining of coal and lignite (Kohlenbergbau)</fullName>
                </value>
                <value>
                    <fullName>B06_Extr. of crude petroleum and nat. gas (Gew. v. Erdöl u. Erdgas)</fullName>
                </value>
                <value>
                    <fullName>B07_Mining of metal ores (Erzbergbau)</fullName>
                </value>
                <value>
                    <fullName>B08_O. mining and quarrying (Gew. v. Steinen u. Erden, sonst. Bergbau)</fullName>
                </value>
                <value>
                    <fullName>B09_Mining support service activities (DL f. den Bergbau)</fullName>
                </value>
                <value>
                    <fullName>C10_Manufacture of food products (H.v. Nahrungs- u. Futterm.)</fullName>
                </value>
                <value>
                    <fullName>C11_Manufacture of beverages (Getränkeherstellung)</fullName>
                </value>
                <value>
                    <fullName>C12_Ma. of tabacco products (Tabakverarbeitung)</fullName>
                </value>
                <value>
                    <fullName>C13_Ma. of textiles (Herstellung von Textilien)</fullName>
                </value>
                <value>
                    <fullName>C14_Ma. of wearing apparel (H.v. Bekleidung)</fullName>
                </value>
                <value>
                    <fullName>C15_Ma. of leather and related products (H.v. Leder, Lederwaren u. Schuhen)</fullName>
                </value>
                <value>
                    <fullName>C16_Ma. of wood a. of prod. of wood a. cork (H.v. Holz-, Flecht-, Korb- u. Korkwa.)</fullName>
                </value>
                <value>
                    <fullName>C17_Ma. of paper and paper products (H.v. Papier, Pappe u. Waren daraus)</fullName>
                </value>
                <value>
                    <fullName>C18_Printing and reprod. of recorded media (H.v. Druckerz.; Vervielf. v. Datenträger)</fullName>
                </value>
                <value>
                    <fullName>C19_Ma. of coke and refined petroleum prod. (Kokerei u. Mineralölverarb.)</fullName>
                </value>
                <value>
                    <fullName>C20_Ma. of chemicals and chemical prod. (H.v. chem. Erzeugnissen)</fullName>
                </value>
                <value>
                    <fullName>C21_Ma. of pharmaceutical prod. a. prep. (H.v. pharma. Erzeugnissen)</fullName>
                </value>
                <value>
                    <fullName>C22_Ma. of rubber and plastic products (H.v. Gummi- u. Kunststoffwaren)</fullName>
                </value>
                <value>
                    <fullName>C23_Ma. of o. non-metallic mineral prod. (H.v. Glas u. Glaswa., Keramik usw.)</fullName>
                </value>
                <value>
                    <fullName>C24_Manufacture of basic metals (Metallerz. u. -bearb.)</fullName>
                </value>
                <value>
                    <fullName>C25_Ma. of fab. metal prod., except mach. (H.v. Metallerz.)</fullName>
                </value>
                <value>
                    <fullName>C26_Ma. of computer and electronic prod. (H.v. Ge. f. die Datenverarb.)</fullName>
                </value>
                <value>
                    <fullName>C27_Manufacture of electrical equipment (H.v. el. Ausrüst.)</fullName>
                </value>
                <value>
                    <fullName>C28_Ma. of machinery and equipment n.e.c. (Maschinenbau)</fullName>
                </value>
                <value>
                    <fullName>C29_Ma. of motor vehicles (H.v. Automobilen u. Automobilt.)</fullName>
                </value>
                <value>
                    <fullName>C30_Ma. of o. transport equipment (Sonst. Fahrzeugbau)</fullName>
                </value>
                <value>
                    <fullName>C31_Manufacture of furniture (H.v. Möbeln)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Last_Activity_Date__c</fullName>
        <description>Field created by Nexell and used to display the last activity date.</description>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Credit_Check__c</fullName>
        <description>Created by Nexell and used to view the date of the last Credit Check.</description>
        <label>Last Credit Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Onsite_Visit__c</fullName>
        <description>Field created by Nexell and used to track the date of the last completed Onsite Visit</description>
        <label>Last Onsite Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Zefix_Update__c</fullName>
        <description>Field created by Nexell to store the last date/time Zefix updates Account information.</description>
        <label>Last Zefix Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Lead_Ownership__c</fullName>
        <description>Used to map lead ownership. This field will be used in a process builder to bring the value to the standard Account Ownership.</description>
        <label>Lead_Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Sole proprietorship (Einzelunternehmen)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>General Partnership (Kollektivgesellschaft)</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Limited (Aktiengesellschaft)</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Limited Liability Company (Gesellschaft mit beschränkter Haftung)</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Cooperative (Genossenschaft)</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Association (Verein)</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Foundation (Stiftung)</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Particular legal form (Besondere Rechtsformen)</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Swiss branch (Schweizerische Zweigniederlassung)</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Limited Partnership (Kommanditgesellschaft)</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Corporation with unlimited partners (Kommanditaktiengesellschaft)</label>
                </value>
                <value>
                    <fullName>82</fullName>
                    <label>Public corporation (Selbst. öffentlichrechtliche Körperschaft)</label>
                </value>
                <value>
                    <fullName>83</fullName>
                    <label>Public-law institution (öffentlichrechtliche Anstalt)</label>
                </value>
                <value>
                    <fullName>84</fullName>
                    <label>Indivision (Gemeinderschaft)</label>
                </value>
                <value>
                    <fullName>85</fullName>
                    <label>Institute of public law (Institut des öffentlichen Rechts)</label>
                </value>
                <value>
                    <fullName>86</fullName>
                    <label>Non-commercial procuration (Nichtkaufmännische Prokura)</label>
                </value>
                <value>
                    <fullName>89</fullName>
                    <label>Not defined legal form (Nicht definierte Rechtsform)</label>
                </value>
                <value>
                    <fullName>92</fullName>
                    <label>Foreign branch (Ausländische Zweigniederlassung)</label>
                </value>
                <value>
                    <fullName>101</fullName>
                    <label>Sole proprietorship (Einzelunternehmen).</label>
                </value>
                <value>
                    <fullName>823</fullName>
                    <label>Limited by public law (öffentlichrechtliche AG)</label>
                </value>
                <value>
                    <fullName>824</fullName>
                    <label>LLC by public law (öffentlichrechtliche GmbH)</label>
                </value>
                <value>
                    <fullName>825</fullName>
                    <label>Cooperative by public law (öffentlichrechtliche Genossenschaft)</label>
                </value>
                <value>
                    <fullName>826</fullName>
                    <label>Association by public law (öffentlichrechtlicher Verein)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Locked_Account_Customer_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to lock the account when there is an open case with type Customer Change.</description>
        <label>Locked Account Customer Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_MRC_Summary__c</fullName>
        <description>Used to summarize all Active Services recurring charges.</description>
        <inlineHelpText>This is a summary field. It is based on the total amount of Recurring Charges in the Active Services.</inlineHelpText>
        <label>Account Summary MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Mailing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created by Nexell and used to identify Accounts that Opted out from mailings.</description>
        <label>Mailing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Main_Commercial_Contact__c</fullName>
        <description>Used to track changed under the Account-Contact Relationship for the role Main Commercial Contact</description>
        <label>Main Commercial Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Main_Technical_Contact__c</fullName>
        <description>Used to track changed under the Account-Contact Relationship for the role Main Technical Contact</description>
        <label>Main Technical Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Managed_in_SuperOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to freeze the Account &amp; Opportunities.</description>
        <label>Managed in SuperOffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Max_MRC__c</fullName>
        <label>Max MRC</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile_Authentication_Code__c</fullName>
        <description>Creates a random Code Number used for Authentication</description>
        <formula>RIGHT(UPC_Auto_Pin_Number1__c, 1)+
RIGHT(UPC_Auto_Pin_Number2__c, 1)+
RIGHT(UPC_Auto_Pin_Number3__c, 1)+
RIGHT(UPC_Auto_Pin_Number4__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Authentication Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile__c</fullName>
        <description>Field created by Nexell and used to indicate mobile phone.</description>
        <inlineHelpText>Mobile numbers must start with + or 0 and must contain only spaces and numbers. Non-mobile phone numbers are not allowed in this field.</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UPC_NOGA_Codes_Formatted__c</fullName>
        <formula>SUBSTITUTE(MID(UPC_NOGA_Codes__c , 2 , LEN(UPC_NOGA_Codes__c) - 1) , &apos;#&apos; , &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOGA Codes Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_NOGA_Codes__c</fullName>
        <description>Holds the NOGA codes as issued by the Federal Statistical Office FSO</description>
        <inlineHelpText>Enter the NOGA codes as issued by the Federal Statistical Office FSO, Enter the codes starting with #. Separate multiple codes with #. End the entry with #. Example: #61100#61200#</inlineHelpText>
        <label>NOGA Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>